<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchMatch"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />
</menu>